# BACKEND/src/models/requests/Stat.requests.ts
@@ -1,0 +1,7 @@
+import { Query } from 'express-serve-static-core'
+
+export interface RevenueStatQuery extends Query {
+  startDate: string
+  endDate: string
+  type: string
+}
